[package]
name = "nexa-fluvio-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.35.1"
fluvio = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
anyhow = "1.0"
clap = { version = "4.5.2", features = ["derive"] }
chrono = "0.4.38"
